# ccd

./: .cursorignore  .dependency-cruiser.cjs  .editorconfig  .env  .env.analyze  .env.development  .env.production  .env.test  .eslintrc-auto-import.json  .gitattributes  .gitignore  .npmrc  .prettierignore  .prettierrc.json  .switch-py-env  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONFIG.md  PROJECT_CONTEXT.md  README.en.md  README.md  commitlint.config.ts  eslint.config.ts  index.html  lint-staged.config.mjs  mise.toml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  project.config.json  skills-lock.json  stylelint.config.mjs  tsconfig.app.json  tsconfig.base.json  tsconfig.json  tsconfig.node.json  turbo.json  uno.config.ts  (+5 more)
.agent/: README.md
.ai/: README.md  governance-snapshot.json
.claude/: settings.local.json  skills
.clawhub/: lock.json
.cursor/: Blueprint.md  README.md  settings.json  skills
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.husky/: commit-msg  pre-commit
apps/: vite.shared.ts
apps/desktop/src-tauri/: Cargo.toml  security-scopes.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
ccd-architecture-optimization-plan/: 00-executive-summary.md  01-issue-statistics.md  02-target-architecture.md  03-master-priority-roadmap.md  05-approval-gates.md  MANIFEST.md  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
(+3479 files in other folders)
