[package]
name = "app"
version = "1.0.31"
description = "CCD Desktop Client"
authors = ["Chris Chi"]
license = "GPL-3.0-only"
repository = "https://github.com/ichichuang/ccd"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-shell = "2.3"
tauri-plugin-log = "2.8"
tauri-plugin-window-state = "2.4"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
panic = "abort"
