[package]
name = "ccd-desktop"
version = "1.0.38"
description = "Reusable Vue and Tauri application platform."
authors = ["Chi Chuang"]
edition = "2021"
build = "build.rs"

[dependencies]
tauri = { version = "2.11.2", features = [] }

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }
